fix spacing

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,15 +1,13 @@
 @media screen and (min-width: 768px) {
-  body {
-    width: 100%;
-    overflow-x: hidden;
-  }
+
 
   .main {
     background-image: url("../assets/desktopbg.png");
     background-size: contain;
-    padding: 200px 260px 200px 260px;
+    background-position: center;
+    padding: 255px 260px 255px 260px;
     width: 100%;
-    margin: 48px 0 114px 0;
+    margin: 0;
   }
 
   #first-title {
@@ -30,9 +28,7 @@
 
   header {
     width: 100%;
-    height: 48px;
-    display: flex;
-    align-items: center;
+    height: 70px;
   }
 
   #logo {
@@ -58,20 +54,11 @@
     color: #344563;
   }
 
-  .grid-container {
-    display: grid;
-    row-gap: 114px;
-    place-items: center;
-    grid-template-columns: 142px auto 142px;
-  }
-
   .work {
-    grid-column: 2 / 3;
-    place-self: center;
+    width: 100%;
     display: flex;
     flex-direction: row;
-    margin: 0 142px;
-    width: fit-content;
+    margin: 114px 0px;
     padding: 24px;
   }
 
@@ -79,24 +66,35 @@
     flex-direction: row-reverse;
   }
 
-  .big-img {
-    width: 544px;
+  .img-work {
+    width: 50%;
     height: 448px;
   }
 
   .info {
     display: flex;
     flex-direction: column;
-    padding: 24px;
-    align-items: flex-start;
+    /* width: 544px; */
+    width: 50%;
+    padding: 24px 22px 0px 22px;
   }
+  .work-title {
+    /* width: 496px; */
+    font-size: 40px;
+    line-height: 52px;
 
+  }
+  .sub-desc {
+    width: 100%;
+  }
+  .description {
+    /* width: 496px; */
+    width: 100%;
+  }
   .about-me {
     width: 100%;
     display: flex;
     flex-direction: row;
-
-    /* align-self: center; */
     padding: 142px;
     margin-top: 114px;
   }
@@ -105,8 +103,8 @@
     width: 50%;
   }
 
-  .right-side {
-    width: 50%;
+  .techlist {
+    width: 100%;
   }
 
   .lang-subs {
@@ -128,12 +126,43 @@
     height: 120px;
   }
 
-  .contact,
-  form {
+  .contact {
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     background-image: url(../assets/dsktpcontactshapes@2x.png);
+    background-size: contain;
+    background-position: center;
+    padding: 142px 0 120px 0;
+    margin: 0;
+  }
+
+  #contact-me-title {
+    width: 801px;
+    margin: 0;
+    margin-bottom: 12px;
+  }
+
+  #cont-desc {
+    width: 596px;
+    margin: 0;
+    padding: 0;
+  }
+
+  form {
+    width: 447px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 12px;
+  }
+
+  .white {
+    width: 140px;
+    height: 48px;
+    overflow: hidden;
+    margin: 0;
+    margin-top: 27px;
   }
 }
