--- a/css/style.css
+++ b/css/style.css
@@ -2,21 +2,14 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  overflow-x: hidden;
 }
 
-/* html {
-  min-height: 100vh;
-} */
 
 body {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  width: 100%;
   color: #091e42;
   background-color: #f7f7f9;
   font-family: 'Poppins', sans-serif;
-  min-height: 100vh;
 }
 
 header {
@@ -24,7 +17,6 @@ header {
   background-color: #fff;
   width: 100%;
   height: 48px;
-  box-sizing: border-box;
   display: flex;
   align-items: center;
 }
@@ -94,9 +86,9 @@ button#hamburger-btn {
   top: 48px;
   width: 100%;
   padding: 114px 24px 114px 24px;
-  margin: 0 0 114px 0;
   display: flex;
   flex-direction: column;
+  margin-bottom: 114px;
 }
 
 .icons {
@@ -106,18 +98,25 @@ button#hamburger-btn {
   display: flex;
   margin: 12px 0;
 }
+.grid-container {
+  padding: 0 24px;
+  display: grid;
+  grid-template-columns: 100%;
+}
 
 .work {
-  padding: 16px 16px 28px 16px;
-  width: 327px;
+  padding: 16px;
+  box-shadow: 0 0 1px rgb(72, 72, 72);
   background-color: #fff;
   border-radius: 16px;
   border: 1px solid #dfe1e6;
   margin-bottom: 114px;
 }
 
-.snapshoots {
+.img-work {
   border-radius: 8px;
+  width: 100%;
+  margin: 6px 0;
 }
 
 .work-title {
@@ -129,9 +128,10 @@ button#hamburger-btn {
 
 .sub-desc {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
-  width: 236px;
-  height: 32px;
+  width: 100%;
+  /* height: 32px; */
   margin: 12px 0;
   gap: 8px;
   font-weight: 600;
@@ -145,7 +145,7 @@ button#hamburger-btn {
   font-weight: 400;
   font-size: 15px;
   line-height: 24px;
-  width: 295px;
+  width: 100%;
   margin: 12px 0;
 }
 
@@ -153,8 +153,10 @@ button#hamburger-btn {
   list-style: none;
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
   gap: 8px;
   margin: 12px 0;
+  width: 100%;
 }
 
 .lang {
@@ -200,14 +202,14 @@ button#hamburger-btn {
 }
 
 .about-me {
+  width: 100%;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
-  padding: 114px 0 113px 24px;
+  /* align-items: flex-start; */
+  justify-content: center;
+  padding: 114px 24px 113px 24px;
   background-color: #fff;
   border-top-right-radius: 55px;
-  box-sizing: border-box;
-  min-height: 100vh;
 }
 
 .about-myself-title {
@@ -219,8 +221,16 @@ button#hamburger-btn {
 }
 
 #about-description {
+  width: 100%;
   padding-right: 24px;
   margin-bottom: 12px;
+}
+
+.techlist {
+  list-style: none;
+  /* display: flex;
+  flex-direction: column; */
+  width: 100%;
 }
 
 .grey-background {
@@ -229,7 +239,7 @@ button#hamburger-btn {
   font-weight: 500;
   font-size: 15px;
   line-height: 20px;
-  width: 303px;
+  width: 100%;
   background: #f7f7f9;
   border-radius: 8px;
   margin: 12px 0 12px 0;
@@ -239,14 +249,8 @@ button#hamburger-btn {
   color: #253858;
 }
 
-.techlist {
-  list-style: none;
-  display: flex;
-  flex-direction: column;
-}
-
 .dropdown {
-  width: 327px;
+  width: 100%;
   color: #000;
   font-weight: 500;
   font-size: 20px;
@@ -259,19 +263,18 @@ button#hamburger-btn {
 
 .bottom {
   border-bottom: 1px solid #dfe1e6;
+  width: 100%;
 }
 
 .contact {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
   background-color: #6070ff;
   background-image: url("/assets/contactshapes.png");
   background-position-x: right;
   background-repeat: no-repeat;
   background-size: contain;
   border-top-left-radius: 55px;
-  box-sizing: border-box;
   padding: 103px 24px 40px 24px;
   text-align: center;
   color: #ebebff;
@@ -286,18 +289,16 @@ button#hamburger-btn {
 
 #cont-desc {
   margin-bottom: 50px;
-  box-sizing: border-box;
-  width: 327px;
+  width: 100%;
   font-size: 20px;
   font-weight: 400;
   line-height: 28px;
 }
 
 .txt {
-  width: 327px;
+  width: 100%;
   height: 48px;
   color: #091e42;
-  box-sizing: border-box;
   padding: 12px;
   margin-bottom: 18px;
   border-radius: 8px;
@@ -305,10 +306,9 @@ button#hamburger-btn {
 }
 
 #txtarea {
-  width: 327px;
+  width: 100%;
   height: 170px;
   color: #7a869a;
-  box-sizing: border-box;
   margin-bottom: 2px;
   border-radius: 8px;
   padding: 15px 38px 15px 15px;
